@@ -1,3 +1,6 @@
+Major changes in 40.0:
+* Updated translations
+
 Major changes in 40.rc:
 * Updated translations
 * Minor cleanups
